Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,7 @@
     "def classification_simulation(random_state, std):\n",
     "\n",
     "    # Create X, y (2 classes) and make a color coded scatter plot\n",
-    "    make_blobs(samples=100)\n",
+    "    make_blobs(samples=100, n_features=2, )\n",
     "    # Fit an SVM model\n",
     "    # clf = LinearSVC().fit(X, y)\n",
     "\n",
