Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -245,6 +245,25 @@
     "    make_blobs(samples=100, n_features=2, cluster_std=std, random_state=random_state)\n",
     "    # Fit an SVM model\n",
     "    # clf = LinearSVC().fit(X, y)\n",
+    "    plt.scatter(X[y == 0, 0], X[y == 0, 1], color=\"red\", s=10, label=\"Class A\")\n",
+    "    plt.scatter(X[y == 1, 0], X[y == 1, 1], color=\"blue\", s=10, label=\"Class B\")\n",
+    "\n",
+    "    clf = LinearSVC().fit(X, y)\n",
+    "\n",
+    "    # get the separating hyperplane\n",
+    "    w = clf.coef_[0]\n",
+    "    a = -w[0] / w[1]\n",
+    "    xx = np.linspace(-10, 10)\n",
+    "    yy = a * xx - (clf.intercept_[0]) / w[1]\n",
+    "\n",
+    "    # plot the line, the points, and the nearest vectors to the plane\n",
+    "    plt.plot(xx, yy, 'k-', color=\"black\", label=\"Model\")\n",
+    "\n",
+    "    plt.tick_params(labelbottom='off', labelleft='off')\n",
+    "    plt.xlabel(\"X\")\n",
+    "    plt.ylabel(\"Y\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
     "\n",
     "    # get the Separating hyperplane i.e. the decision boundary\n",
     "    # w = clf.coef_[0]\n",
@@ -256,7 +275,6 @@
     "    \n",
     "\n",
     "    # label and show the plot\n",
-    "    pass\n",
     "\n",
     "random_state = None\n",
     "\n",
